# p7-follow-person-celezm

follow_person/: CMakeLists.txt  package.xml
follow_person/include/follow_person/: Detection2Tf.hpp  FollowPersonNode.hpp  PIDController.hpp
follow_person/launch/: follow_person.launch.py
follow_person/src/: detection_2_tf_main.cpp  person_seeker.cpp
follow_person/src/follow_person/: Detection2Tf.cpp  FollowPersonNode.cpp
